# universal_printer

./: LICENSE  README.md  api_token.ini  pyproject.toml
src/universal_printer/: __init__.py  document_printer.py
src/universal_printer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_document_printer.py
